package com.example.cinema.service.pricing;

import java.math.BigDecimal;

public interface PriceCalculator {
    BigDecimal calculate();
}
